Update d3-chart stylesheet to fix c3 axis label and legend spacing issues

--- a/src/directives/templates/styles/components/_mms-d3-chart.scss
+++ b/src/directives/templates/styles/components/_mms-d3-chart.scss
@@ -1,8 +1,22 @@
+
+/**
+ * C3 Fixes
+ */
+
+.c3 text {
+	font-size: 12px;
+}
+.c3-axis text {
+	font-size: 10px;
+}
+
+
+// @TODO: EVERYTHING BELOW NEEDS TO BE CLEANED UP OR REMOVED
   /*.axis path,
 	.axis line{
 	  fill: none;
 	  stroke:black;
-	  
+
 	}*/
 
 	.axis text{
@@ -53,7 +67,7 @@
        font-family: sans-serif;
 	  	 font-size: 12px;
     }
-    
+
 
     .papchart .axis path,
     .papchart .axis .tick line {
